# oc25_mathieu

./: README.md  READ_ME.md
1_robotique/: Rob_3-main.py  TPLibre.md  TPLibreRobotique  TpLibre-main (1).py  devoir_ex2.py  ex2-main.py  rob3-main.py
1_robotique/Libre/: TPLibre.md  TpLibre-main (1).py
1_robotique/cours/: Rob_3-main.py  ex1.py  ex3-main.py
2_web/: index.html
2_web/contenu/: example.html  example2.html  index.html  page1.html
2_web/css/: Style.css
2_web/jeu/: acardinaux.ch:jeuv3.webloc
2_web/js/: Java.js  exemple.js  exemple2.js
2_web_exemple/contenu/: canvas.html  example.html  miseenpage.html
2_web_exemple/js/: exemple.js  exemple2.js
3_ia/: Lecture1.md  Lecture4.md  Markdown.md  Winners.md  tp2.ipynb  tp3-v2.ipynb
3_ia/tp4/: _tp4_v2.ipynb  pyproject.toml
3_ia/tp4/data/: ATTRIBUTION.md  moliere_merged.txt  moliere_t1.txt  moliere_t1_clean.txt  moliere_t2.txt  moliere_t2_clean.txt  moliere_t3.txt  moliere_t3_clean.txt  moliere_t4.txt  moliere_t4_clean.txt
3_ia/tp_3/: tp3-v2.ipynb
4_jeu3d/csg/: ex_1.tscn  ex_2.tscn  ex_3.tscn
4_jeu3d/jeu_2d/: hud.gd  hud.gd.uid  hud.tscn  icon.svg.import  main.gd  main.gd.uid  main.tscn  mob.gd  mob.gd.uid  mob.tscn  player.gd  player.gd.uid  player.tscn  project.godot
4_jeu3d/jeu_3d/: icon.svg.import  project.godot
4_jeu3d/jeu_mathieu/: icon.svg.import  new_script.gd.uid  project.godot
4_jeu3d/light/: RoomNotWindowed.tscn  RoomWindowed.tscn  candle.tscn  directional_light_3d.gd  (+7 more)
docs/: Java.js  Style.css  about.html  credits.html  index.html  page1.html  page2.html  rayancursed.html
(+103 files in other folders)
